--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -46,6 +46,7 @@
             <%= render 'layouts/search_form' %>
           <% elsif admin_signed_in? %>
             <li class="nav-item"><%= link_to "顧客一覧", admin_customers_path, class: "btn btn-light nav-link ml-2" %></li>
+            <li class="nav-item"><%= link_to "通報一覧", admin_reports_path, class: "btn btn-light nav-link ml-2" %></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle btn btn-light ml-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ペット情報一覧
