--- a/app/views/admin/reports/_index.html.erb
+++ b/app/views/admin/reports/_index.html.erb
@@ -1,5 +1,4 @@
 <div class="container mt-5">
-  <%= link_to "会員一覧へ",admin_customers_path,class: "btn btn-primary " %>
   <div class="card">
     <div class="card-body">
       <h3 class="card-title">通報一覧</h3>
@@ -10,8 +9,7 @@
             <tr>
               <th>通報ID</th>
               <th>通報日</th>
-              <th>会員名</th>
-              <th>通報者</th>
+              <th>通報された会員</th>
               <th>通報された回数</th>
               <th>ステータス</th>
             </tr>
@@ -22,11 +20,8 @@
                 <td><%= link_to report.id, admin_report_path(report) %></td>
                 <td><%= report.created_at.in_time_zone('Tokyo').strftime('%Y-%m-%d %H:%M:%S') %></td>
                 <td><%= report.reported.name %></td>
-                <td><%= report.reporter.name %></td>
                 <td><%= Report.where(reported_id: report.reported_id).count %></td>
-                <td>
-                  <% report.report_status %>
-                </td>
+                <td><%= report.report_status_i18n %></td>
               </tr>
             <% end %>
           </tbody>
