--- a/app/views/public/reports/_report_form.html.erb
+++ b/app/views/public/reports/_report_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: report, url: reports_path, remote: true do |f| %>
+<%= form_with model: report, url: reports_path, local: false do |f| %>
   <div class="form-check">
     <%= f.radio_button :reason, "inappropriate_content" %>
     <%= f.label :reason_inappropriate_content, I18n.t("enums.report.reason.inappropriate_content"), class: "form-check-label" %>
@@ -17,5 +17,7 @@
   </div>
   <%= f.hidden_field :content_id, value: params[:content_id] %>
   <%= f.hidden_field :content_type, value: params[:content_type] %>
-  <%= f.submit "報告", class: "btn btn-dark my-3 text-center mx-2" %>
+  <div>
+    <%= f.submit "報告", class: "btn btn-secondary mt-3" %>
+  </div>
 <% end %>
