--- a/app/views/admin/reports/index.html.erb
+++ b/app/views/admin/reports/index.html.erb
@@ -1,6 +1,3 @@
-<h1>Admin::Reports#index</h1>
-<p>Find me in app/views/admin/reports/index.html.erb</p>
-
 <div class="container">
   <div class="row my-5 mx-auto">
     <div class="col-md-10 offset-1">
@@ -10,7 +7,7 @@
   </div>
   <div class="row mb-5">
     <div class="mx-auto mb-5">
-      <%#= paginate @reports, theme: 'bootstrap-5' %>
+      <%= paginate @reports %>
     </div>
   </div>
 </div>
