--- a/app/views/admin/reports/show.html.erb
+++ b/app/views/admin/reports/show.html.erb
@@ -1,6 +1,3 @@
-<h1>Admin::Reports#show</h1>
-<p>Find me in app/views/admin/reports/show.html.erb</p>
-
 <div class="card mx-auto mt-5" style="width: 500px;">
   <div class="card-body">
     <h3 class="card-title text-center">通報詳細</h3>
@@ -9,8 +6,8 @@
       <div class="col-6"><%= link_to @report.id %></div>
     </div>
     <div class="row">
-      <div class="col-6"><strong>会員名</strong></div>
-      <div class="col-6"><%= link_to @report.reported.nickname, admin_user_path(@report.reported_id) %></div>
+      <div class="col-6"><strong>通報された会員</strong></div>
+      <div class="col-6"><%= link_to @report.reported.name, admin_customer_path(@report.reported_id) %></div>
     </div>
     <div class="row">
       <div class="col-6"><strong>理由</strong></div>
@@ -18,14 +15,18 @@
     </div>
     <div class="row">
       <div class="col-6"><strong>通報者</strong></div>
-      <div class="col-6"><%= @report.reporter.nickname %></div>
+      <div class="col-6"><%= @report.reporter.name %></div>
+    </div>
+    <div class="row">
+      <div class="col-6"><strong>通報対象</strong></div>
+      <div class="col-6"><%= @report.content_type %></div>
     </div>
     <div class="row">
       <div class="col-6"><strong>対応ステータス</strong></div>
       <div class="col-6">
         <%= form_with model:@report, url:admin_report_path(@report), method: :patch, local: true do |f| %>
           <div class="form-group text-center">
-            <%= f.select :is_checked, { "未確認": false, "確認済み": true }, {}, class: "form-control" %>
+            <%= f.select :report_status, Report.report_statuses.keys.map { |key| [I18n.t("enums.report.report_status.#{key}"), key] }, {}, class: "form-control" %>
           </div>
           <%= f.submit '更新', class: "btn btn-primary" %>
         <% end %>
