--- a/app/views/public/pet_posts/_detail.html.erb
+++ b/app/views/public/pet_posts/_detail.html.erb
@@ -88,6 +88,7 @@
   <div class="row">
     <div class="col-md-8 sm-8 mx-auto">
       <div id="comments_list">
+        <div class="success-message custom-bg-light-green"></div>
         <%= render 'public/comments/comments-lists', pet_post: pet_post, comment: comment %>
       </div>
     </div>
