--- a/app/views/public/reports/_report_btn.html.erb
+++ b/app/views/public/reports/_report_btn.html.erb
@@ -1,5 +1,5 @@
  <!-- モーダルウィンドウのトリガーボタンを追加 -->
-<i class="fas fa-ellipsis-v open-report-modal-button" data-comment-id="<%= comment.id %>" data-content-id="<%= comment.id %>" data-content-type="Comment" data-report-success="true"  style="cursor: pointer;"></i>
+<i class="fa-solid fa-flag open-report-modal-button text-warning", data-comment-id="<%= comment.id %>" data-content-id="<%= comment.id %>" data-content-type="Comment" data-report-success="true"  style="cursor: pointer;"></i>
 
 <div id="report-modal" class="modal">
   <div class="common-modal-content"></div>
