--- a/app/views/public/reports/new.html.erb
+++ b/app/views/public/reports/new.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-8 offset-md-2">
        <div class="report-title text-center">
-          <h3>コメントの報告</h3>
+          <h3>コメントの通報</h3>
         </div>
       <div class="d-flex justify-content-center">
         <div class="text-left">
