--- a/app/views/public/passwords/new.html.erb
+++ b/app/views/public/passwords/new.html.erb
@@ -1,16 +1,23 @@
-<h2>パスワードを忘れましたか?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%#= render "publics/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center rounded px-0 my-5">
+        <h5 class="text-dark bg-light py-4 mt-1 mb-0">パスワード再設定</h5>
+        <div class="form-body p-4">
+          <div class="mx-auto text-center">
+            <p>メールアドレスを入力してください。</p>
+          </div>
+           <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+             <%= render "public/shared/error_messages", resource: resource %>
+              <div class="input-group mb-3">
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder:"メールアドレス" %>
+            </div>
+                <%= f.submit "送信する", class:"btn btn-block btn-outline-secondary mt-4" %>
+          <% end %>
+            <div class="mt-5">
+              ※パスワード再設定URLが記載された<br>メールをお送りいたします。
+            </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%#= render "publics/shared/links" %>
+</div>
