--- a/app/views/public/passwords/edit.html.erb
+++ b/app/views/public/passwords/edit.html.erb
@@ -1,25 +1,27 @@
-<h2>パスワード編集</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center rounded px-0 my-5">
+        <h5 class="text-dark bg-light py-4 mt-1 mb-0">パスワードを変更する</h5>
+        <div class="form-body p-4">
+          <div class="mx-auto text-center">
+            <p>新しいパスワードを入力してください。</p>
+          </div>
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+            <%= render "public/shared/error_messages", resource: resource %>
+            <%= f.hidden_field :reset_password_token %>
+            <div class="input-group mb-3">
+              <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control", placeholder:"パスワード" %>
+            </div>
+            <div class="my-2">
+              確認のため上記と同じパスワードを入力してください
+            </div>
+            <div class="input-group mb-3">
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder:"パスワード" %>
+            </div>
+              <%= f.submit "変更する", class:"btn btn-block btn-outline-secondary mt-4" %>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+</div>
