--- a/app/views/admin/reports/show.html.erb
+++ b/app/views/admin/reports/show.html.erb
@@ -1,28 +1,34 @@
 <div class="card mx-auto mt-5" style="width: 500px;">
   <div class="card-body">
-    <h3 class="card-title text-center">通報詳細</h3>
-    <div class="row">
-      <div class="col-6"><strong>通報ID</strong></div>
+    <h3 class="card-title text-center mb-4">通報詳細</h3>
+    <div class="row" style="height: 40px;">
+      <div class="col-6">通報ID</div>
       <div class="col-6"><%= link_to @report.id %></div>
     </div>
-    <div class="row">
-      <div class="col-6"><strong>通報された会員</strong></div>
+    <div class="row" style="height: 40px;">
+      <div class="col-6">通報された会員</div>
       <div class="col-6"><%= link_to @report.reported.name, admin_customer_path(@report.reported_id) %></div>
     </div>
-    <div class="row">
-      <div class="col-6"><strong>理由</strong></div>
+    <div class="row" style="height: 40px;">
+      <div class="col-6">理由</div>
       <div class="col-6"><%= I18n.t("enums.report.reason.#{@report.reason}") %></div>
     </div>
-    <div class="row">
-      <div class="col-6"><strong>通報者</strong></div>
+    <div class="row" style="height: 40px;">
+      <div class="col-6">通報者</div>
       <div class="col-6"><%= @report.reporter.name %></div>
     </div>
-    <div class="row">
-      <div class="col-6"><strong>通報対象</strong></div>
-      <div class="col-6"><%= @report.content_type %></div>
+    <div class="row" style="height: 40px;">
+      <div class="col-6">通報対象</div>
+      <div class="col-6"><%= @report.display_content_type %></div>
     </div>
-    <div class="row">
-      <div class="col-6"><strong>対応ステータス</strong></div>
+    <div class="row" style="height: 40px;">
+<% if @report.content.present? %>
+      <div class="col-6">該当の投稿</div>
+      <div class="col-6"><%= link_to '投稿', admin_pet_post_path(@report.content.pet_post) %></div>
+
+    </div>
+    <div class="row" style="height: 40px;">
+      <div class="col-6">対応ステータス</div>
       <div class="col-6">
         <%= form_with model:@report, url:admin_report_path(@report), method: :patch, local: true do |f| %>
           <div class="form-group text-center">
@@ -33,8 +39,12 @@
       </div>
     </div>
   </div>
-  <div class="text-center">
+  <% else %>
+       <div class="col-6">対応ステータス</div>
+       <div class="col-6">該当の<%= @report.display_content_type %>は<br>削除済みです。</div>
+      <% end %>
+
+</div>
+ <div class="text-center mt-5">
     <%= link_to "通報一覧へ", admin_root_path %>
   </div>
-</div>
-
