add_customer_count

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -7,13 +7,13 @@
       <div class="row justify-content-center">
         <div class="col-md-10 col-sm-8 my-3">
           <div class="table-responsive">
-            <table class='table '>
+            <table class='table table-hover table-sm'>
               <tr class="bg-light">
                 <th style="width: 10%">会員ID</th>
                 <th style="width: 20%">氏名</th>
                 <th style="width: 30%">メールアドレス</th>
                 <th style="width: 20%">ステータス</th>
-                <th style="width: 20%">通報回数</th>
+                <th style="width: 20%">通報された回数</th>
               </tr>
               <% @customers.each do |customer| %>
                 <tr>
