--- a/app/views/admin/reports/_index.html.erb
+++ b/app/views/admin/reports/_index.html.erb
@@ -1,39 +1,31 @@
-<div class="container mt-5">
-  <div class="card">
-    <div class="card-body">
-      <h3 class="card-title">通報一覧</h3>
-      ※番号から通報詳細へ飛びます。
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-8 my-3">
+      <p>※通報日から通報詳細へ飛びます。</p>
       <div class="table-responsive">
         <table class="table table-hover">
-          <thead>
-            <tr>
+            <tr class="bg-light">
               <th>通報ID</th>
-              <th>通報日</th>
+              <th>通報日(新着順)</th>
               <th>通報された会員</th>
               <th>通報された回数</th>
               <th>ステータス</th>
             </tr>
-          </thead>
-          <tbody>
             <% @reports.each do |report| %>
-
               <tr>
-                <td><%= link_to report.id, admin_report_path(report) %></td>
-                <td><%= report.created_at.in_time_zone('Tokyo').strftime('%Y-%m-%d %H:%M:%S') %></td>
+                <td><%= report.id %></td>
+                <td><%= link_to report.created_at.in_time_zone('Tokyo').strftime('%Y-%m-%d %H:%M:%S'), admin_report_path(report) %></td>
                 <td><%= report.reported.name %></td>
                 <td><%= Report.where(reported_id: report.reported_id).count %></td>
                 <% if report.content.present? %>
-                <td><%= report.report_status_i18n %></td>
+                <td style="<%= 'color: red;' if report.report_status_i18n == '未対応' %>"><%= report.report_status_i18n %></td>
               </tr>
               <% else %>
               <td>対応済み</td>
               <% end %>
             <% end %>
-          </tbody>
         </table>
       </div>
-    </div>
-  </div>
-  <div class="pagination justify-content-center">
+  <div>
   </div>
 </div>
