--- a/app/views/admin/reports/index.html.erb
+++ b/app/views/admin/reports/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="row my-5 mx-auto">
-    <div class="col-md-10 offset-1">
-      <h4 class="my-3">通報一覧</h4>
-        <%= render 'admin/reports/index', reports: @reports %>
+  <div class="row justify-content-center">
+    <div class="col">
+      <h4 class="my-4 ml-5">通報一覧</h4>
+      <%= render 'admin/reports/index', reports: @reports %>
     </div>
   </div>
   <div class="row mb-5">
