--- a/app/views/admin/reports/show.html.erb
+++ b/app/views/admin/reports/show.html.erb
@@ -22,10 +22,9 @@
       <div class="col-6"><%= @report.display_content_type %></div>
     </div>
     <div class="row" style="height: 40px;">
-<% if @report.content.present? %>
-      <div class="col-6">該当の投稿</div>
-      <div class="col-6"><%= link_to '投稿', admin_pet_post_path(@report.content.pet_post) %></div>
-
+  <% if @report.content.present? %>
+      <div class="col-6">該当の<%= @report.display_content_type %></div>
+      <div class="col-6"><%= link_to @report.display_content_type, admin_pet_post_path(@report.content.pet_post) %></div>
     </div>
     <div class="row" style="height: 40px;">
       <div class="col-6">対応ステータス</div>
@@ -42,9 +41,8 @@
   <% else %>
        <div class="col-6">対応ステータス</div>
        <div class="col-6">該当の<%= @report.display_content_type %>は<br>削除済みです。</div>
-      <% end %>
-
-</div>
+  <% end %>
  <div class="text-center mt-5">
-    <%= link_to "通報一覧へ", admin_root_path %>
+    <%= link_to "通報一覧へ", admin_reports_path %>
   </div>
+</div>
