--- a/app/views/admin/customers/_form.html.erb
+++ b/app/views/admin/customers/_form.html.erb
@@ -23,8 +23,10 @@
     <tr>
       <td>会員ステータス</td>
       <td>
-        <%= f.radio_button :active, true %><%= f.label :有効 %>
-        <%= f.radio_button :active, false %><%= f.label :アカウント停止 %>
+        <%= f.radio_button :active, true, id: "true_radio" %>
+        <%= f.label :有効, for: "true_radio" %><br>
+        <%= f.radio_button :active, false, id: "false_radio" %>
+        <%= f.label :アカウント停止, for: "false_radio" %>
       </td>
     </tr>
     <tr>
