--- a/app/views/searches/detail.html.erb
+++ b/app/views/searches/detail.html.erb
@@ -10,6 +10,21 @@
         </div>
       </div>
     </div>
+
+  <p>検索条件:</p><br>
+<ul>
+  <% if @q.pet_status_eq.present? %>
+    <li>ペット状況: <%= @q.pet_status_eq == '1' ? '迷子' : '保護' %></li>
+  <% end %>
+  <% if @q.species_eq.present? %>
+    <li>ペットの種類: <%= @q.species_eq %></li>
+  <% end %>
+  <% if @q.gender_eq.present? %>
+    <li>ペットの性別: <%= @q.gender_eq %></li>
+  <% end %>
+</ul>
+
+
     <div class="container">
       <div class="row">
         <% if @pet_posts.present? %>
