--- a/app/views/admin/pet_posts/_list.html.erb
+++ b/app/views/admin/pet_posts/_list.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-3 col-sm-6 my-3">
-  <div class="card mx-auto" style="width: 17rem;">
+  <div class="card mx-auto">
     <%= link_to admin_pet_post_path(pet_post.id) do %>
       <%= image_tag pet_post.get_image(500, 500), class: "card-img-top img-fluid", style: "object-fit: cover; height: 280px;" %>
     <% end %>
