--- a/app/views/public/pet_posts/_list.html.erb
+++ b/app/views/public/pet_posts/_list.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-3 col-sm-6 my-3">
-  <div class="card mx-auto" style="width: 17rem;">
+  <div class="card mx-auto">
     <%= link_to pet_post_path(pet_post.id) do %>
       <%= image_tag pet_post.get_image(500, 500), class: "card-img-top img-fluid", style: "object-fit: cover; height: 280px;" %>
     <% end %>
@@ -18,7 +18,7 @@
           <div style="height: 60px;">
           <p>場所 :  <b><%= pet_post.prefecture %><%= pet_post.area %>付近</b></p>
           </div>
-              <% count = 0 %>
+            <% count = 0 %>
           <p>
             <% pet_post.tags.each do |tag|%>
               <% if count < 3 %>
