--- a/app/views/public/customers/_info.html.erb
+++ b/app/views/public/customers/_info.html.erb
@@ -21,5 +21,5 @@
   </tr>
 </table>
 <% unless customer.is_guest? %>
-  <%= link_to "編集する",  edit_customer_path, class: "btn btn-outline-secondary" %>
+  <%= link_to "編集する",  edit_customer_path(customer), class: "btn btn-outline-secondary" %>
 <% end %>
