add controller pet_post

--- a/app/views/public/pet_posts/_form.html.erb
+++ b/app/views/public/pet_posts/_form.html.erb
@@ -48,7 +48,7 @@
   </div>
 </div>
 <div class="form-group">
-  <%= f.label :address, "年齢" %>
+  <%= f.label :age, "年齢" %>
   <%= f.text_field :age, class: "form-control", placeholder: "例: 2歳、子犬、成犬、シニア犬"  %>
 </div>
 <div class="form-group">
