--- a/app/views/public/pet_posts/new.html.erb
+++ b/app/views/public/pet_posts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 sm-5 mx-auto">
-      <h4 class="my-4 ml-4">保護迷子情報新規登録</h4>
+      <h4 class="my-4 ml-4">迷子・保護情報新規登録</h4>
     </div>
   </div>
 </div>
