--- a/app/views/searches/detail.html.erb
+++ b/app/views/searches/detail.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col">
       <div class="d-flex align-items-center">
-        <h4 class="my-2">絞り込み検索結果</h4>
+        <h4 class="my-3">絞り込み検索結果</h4>
         <div class="ml-3">
           <% if customer_signed_in? %>
             <%= link_to "絞り込み検索", new_search_path, class:"btn btn-outline-secondary mb-2" %>
@@ -17,7 +17,7 @@
             <%= render 'public/pet_posts/list', pet_post: pet_post %>
           <% end %>
         <% else %>
-          <div class="d-flex align-items-center justify-content-center" style="height: 300px;">
+          <div class="d-flex align-items-center mx-auto" style="height: 300px;">
             <h4 class="text-center">一致する検索結果はありません</h4>
           </div>
         <% end %>
