--- a/app/views/public/pet_posts/_form.html.erb
+++ b/app/views/public/pet_posts/_form.html.erb
@@ -60,7 +60,7 @@
   <%= f.select :prefecture, prefecture_options, { prompt: "選択してください" }, class: "form-control" %>
 </div>
 <div class="form-group">
-  <%= f.label :area, "詳細住所" %>
+  <%= f.label :area, "詳細住所(20文字以内)" %>
   <%= f.text_field :area, class: "form-control", placeholder: "例:〇〇市〇〇町11-1" %>
 </div>
 <div class="form-group">
@@ -68,10 +68,10 @@
   <%= f.date_field :occurred_on, class: "form-control" %>
 </div>
 <div class="form-group">
-  <%= f.label :characteristics, "特徴" %>
+  <%= f.label :characteristics, "特徴(50文字以内)" %>
   <%= f.text_field :characteristics, class: "form-control", placeholder: "毛色、模様、特徴を入力してください" %>
 </div>
 <div class="form-group">
-  <%= f.label :description, "説明文" %>
+  <%= f.label :description, "説明文特徴(60文字以内)" %>
   <%= f.text_field :description, class: "form-control", placeholder: "状況や伝えたいことなどご自由にお書きください"  %>
 </div>
