--- a/app/views/public/comments/_comments-lists.html.erb
+++ b/app/views/public/comments/_comments-lists.html.erb
@@ -6,7 +6,7 @@
       <td><%= comment.comment %></td>
       <td>
         <% if comment.customer == current_customer %>
-          <%= link_to "削除", pet_post_comment_path(comment.pet_post, comment), method: :delete, remote: true, class: "btn btn-sm btn-outline-secondary"  %>
+          <%= link_to "削除", pet_post_comment_path(comment.pet_post, comment), method: :delete, remote: true, "data-confirm" => "本当に削除しますか？", class: "btn btn-sm btn-outline-secondary"  %>
         <% end %>
       </td>
       <td class="report-btn" id="report-btn-<%= comment.id %>">
