--- a/app/views/public/comments/_comments-lists.html.erb
+++ b/app/views/public/comments/_comments-lists.html.erb
@@ -1,27 +1,25 @@
 <% pet_post.comments.each do |comment| %>
-  <div class="card mx-auto">
-    <div class="card-body">
-        <div class="d-flex">
-          <div class="card-title ms-3">
-            <%= link_to comment.customer.name, customer_path(comment.customer) %>
-          </div>
-          <div class="mx-3">
-            <%= "#{time_ago_in_words(comment.created_at)}前" %>
-          </div>
-         
+  <div class="card my-2">
+    <div class="card-body p-2">
+      <div class="d-flex">
+        <div class="card-title ms-3 mb-1">
+          <%= link_to comment.customer.name, customer_path(comment.customer) %>
         </div>
-        <p class="card-text"><%= comment.comment %></p>
-        <div class="d-flex">
-         <div class="mx-3">
-            <% if comment.customer == current_customer %>
-              <%= link_to "削除", pet_post_comment_path(comment.pet_post, comment), method: :delete, remote: true, "data-confirm" => "本当に削除しますか？", class: "btn btn-sm btn-outline-secondary"  %>
-            <% end %>
-          </div>
-          <div class="report-btn" id="report-btn-<%= comment.id %>">
-          　<%= render "public/reports/report_btn", comment: comment %>
+        <div class="mx-3">
+          <%= "#{time_ago_in_words(comment.created_at)}前" %>
         </div>
+      </div>
+      <p class="card-text mb-2"><%= comment.comment %></p>
+      <div class="d-flex">
+        <div class="report-btn" id="report-btn-<%= comment.id %>">
+          <%= render "public/reports/report_btn", comment: comment %>
         </div>
-    
+        <div class="mx-3">
+          <% if comment.customer == current_customer %>
+            <%= link_to "削除", pet_post_comment_path(comment.pet_post, comment), method: :delete, remote: true, "data-confirm" => "本当に削除しますか？", class: "btn btn-sm btn-outline-secondary"  %>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 <% end %>
