--- a/app/views/public/pet_posts/_detail.html.erb
+++ b/app/views/public/pet_posts/_detail.html.erb
@@ -94,7 +94,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-8 sm-8 mx-auto">
+    <div class="col-md-8 sm-8 mx-auto mt-4">
         <%= render 'public/comments/form', pet_post: pet_post, comment: comment %>
     </div>
   </div>
