--- a/app/views/admin/comments/_comments-lists.html.erb
+++ b/app/views/admin/comments/_comments-lists.html.erb
@@ -1,12 +1,18 @@
-<table class= "table table-borderless">
-  <% pet_post.comments.each do |comment| %>
-    <tr>
-      <td>投稿日：<%= comment.created_at.in_time_zone('Tokyo').strftime('%Y-%m-%d %H:%M') %></td>
-      <td><%= link_to comment.customer.name, admin_customer_path(comment.customer)  %></td>
-      <td><%= comment.comment %></td>
-      <td>
+<% pet_post.comments.each do |comment| %>
+  <div class="card my-2">
+    <div class="card-body p-2">
+      <div class="d-flex">
+        <div class="card-title ms-3 mb-1">
+          <%= link_to comment.customer.name, admin_customer_path(comment.customer)  %>
+        </div>
+        <div class="mx-3">
+          <%= "#{time_ago_in_words(comment.created_at)}前" %>
+        </div>
+      </div>
+      <p class="card-text mb-2"><%= comment.comment %></p>
+      <div class="mx-3">
         <%= link_to "削除", admin_comment_path(comment), method: :delete, class: "btn btn-sm btn-outline-secondary" %>
-      </td>
-    </tr>
-  <% end %>
-</table>
+      </div>
+    </div>
+  </div>
+<% end %>
