--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -16,6 +16,13 @@ body {
   background-color: rgba(0, 128, 0, 0.5); /* 緑色のRGBA表現で透明度0.5 */
 }
 
+.group-index-img{
+    border-radius: 0.25rem;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+  }
+
 /* モーダルの背景 */
 .modal {
   display: none;
